@startuml db

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "Nomatif" as n {
  *kegiatan: string(32)
  --
  *tujuan : string(64)
  *berangkat : tanggal
  *kembali : tanggal
  *keterangan : string(64)
  *status : Status_id <<FK>>
  *ppk : Pegawai_NIP <<FK>>
}

entity "Pegawai" as p {
    *NIP : UnsignedBigInteger
  --
  *nama : string(64)
  *golongan : unsignedTinyInteger
}

entity "Personil" as pe {
  *id : serial <<generated>>
  --
  *nomatif : Nomatif_kegiatan <<FK>>
  *pegawai: Pegawai_NIP <<FK>>
}

entity "RRB" as r {
  *nomatif : Nomatif_kegiatan <<FK>>
  --
  *uraian : text
  *keterangan : text
}

entity "status" as s {
  *id : string(4)
  --
  *status : text
}

entity "sub_RAB" as kr {
    *id : unsignedTinyInteger
  --
  *status : text
}

entity "RAB" as ra {
  *nomatif : Nomatif_kegiatan <<FK>>
  --
  *tipe : sub_RAB_id <<FK>>
  *keterangan : text
  *jumlah_1 : unsignedSmallInteger
  *unit_1 : string(8)
  *jumlah_2 : unsignedSmallInteger
  *unit_2 : string(8)
  *harga : unsignedInteger
}

pe }o..|| p
pe }|..|| n
n ||..|| r
n ||..|| ra
n }o..|| s
ra }o..|| kr

@enduml
